# py-nod

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  MANIFEST.in  README.md  _nod.pyx  appveyor.yml  mahlib.cpp  mahlib.h  nod.pyx  nod_wrap.pxd  pyproject.toml  setup.cfg  setup.py  test.pyx
.github/: dependabot.yml
.github/workflows/: python.yml
ci-scripts/: build.sh
nod/: __init__.py  __main__.py  nod.pyx  wrapper.pxd
pxd/: nod.pxd
py-nod/: nod.pyx  nod_wrap_util.cxx  nod_wrap_util.hpp
py-nod/include/: .gitignore
src/nod/: __init__.py  __main__.py  types.py
test/: test_packunpack.py
tests/: test_packunpack.py
travis-scripts/: build.sh
