[metadata]
name = nod
author = Henrique Gemignani
url = https://github.com/henriquegemignani/py-nod
description = Python bindings for the nod library.
long_description = file: README.md
long_description_content_type = text/markdown

license = License :: OSI Approved :: MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
install_requires =

packages = find:
package_dir =
    = src

zip_safe = True
python_requires = >=3.7

[options.packages.find]
where = src